--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -155,6 +155,38 @@
   "tv_history_wikipedia": "",
   "tv_milenium_wikipedia": "",
   "tv_century_wikipedia": "",
+  "tv_hadean": "Hadaikum",
+  "tv_archean": "Archaikum",
+  "tv_proterozoic": "Proterozoikum",
+  "tv_phanerozoic": "Phanerozoikum",
+  "tv_paleozoic": "Paläozoikum",
+  "tv_mesozoic": "Mesozoikum",
+  "tv_cenozoic": "Känozoikum",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Stein",
+  "tv_bronze": "Bronze",
+  "tv_iron": "Eisen",
+  "tv_antiquity": "Antike",
+  "tv_middle ages": "Mittelalter",
+  "tv_renaissance": "Renaissance",
+  "tv_enlightenment": "Aufklärung",
+  "tv_industrial": "Industrie",
+  "tv_contemporary": "Zeitgenössisch",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": "",
   "tv_1300s": "1300er Jahre",
   "tv_1310s": "1310er Jahre",
   "tv_1320s": "1320er Jahre",
@@ -300,37 +332,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "tv_hadean": "Hadaikum",
-  "tv_archean": "Archaikum",
-  "tv_proterozoic": "Proterozoikum",
-  "tv_phanerozoic": "Phanerozoikum",
-  "tv_paleozoic": "Paläozoikum",
-  "tv_mesozoic": "Mesozoikum",
-  "tv_cenozoic": "Känozoikum",
-  "tv_hadean_wikipedia": "",
-  "tv_archean_wikipedia": "",
-  "tv_proterozoic_wikipedia": "",
-  "tv_phanerozoic_wikipedia": "",
-  "tv_paleozoic_wikipedia": "",
-  "tv_mesozoic_wikipedia": "",
-  "tv_cenozoic_wikipedia": "",
-  "tv_stone": "Stein",
-  "tv_bronze": "Bronze",
-  "tv_iron": "Eisen",
-  "tv_antiquity": "Antike",
-  "tv_middle ages": "Mittelalter",
-  "tv_renaissance": "Renaissance",
-  "tv_enlightenment": "Aufklärung",
-  "tv_industrial": "Industrie",
-  "tv_contemporary": "Zeitgenössisch",
-  "tv_stone_wikipedia": "",
-  "tv_bronze_wikipedia": "",
-  "tv_iron_wikipedia": "",
-  "tv_antiquity_wikipedia": "",
-  "tv_middle ages_wikipedia": "",
-  "tv_renaissance_wikipedia": "",
-  "tv_enlightenment_wikipedia": "",
-  "tv_industrial_wikipedia": "",
-  "tv_contemporary_wikipedia": ""
+  "tv_2020s_wikipedia": ""
 }
