--- a/Jsons/language/en.json
+++ b/Jsons/language/en.json
@@ -155,6 +155,38 @@
   "tv_history_wikipedia": "Writing",
   "tv_milenium_wikipedia": "2nd_millennium",
   "tv_century_wikipedia": "20th_century",
+  "tv_hadean": "Hadean",
+  "tv_archean": "Archean",
+  "tv_proterozoic": "Proterozoic",
+  "tv_phanerozoic": "Phanerozoic",
+  "tv_paleozoic": "Paleozoic",
+  "tv_mesozoic": "Mesozoic",
+  "tv_cenozoic": "Cenozoic",
+  "tv_hadean_wikipedia": "Hadean",
+  "tv_archean_wikipedia": "Archean",
+  "tv_proterozoic_wikipedia": "Proterozoic",
+  "tv_phanerozoic_wikipedia": "Phanerozoic",
+  "tv_paleozoic_wikipedia": "Paleozoic",
+  "tv_mesozoic_wikipedia": "Mesozoic",
+  "tv_cenozoic_wikipedia": "Cenozoic",
+  "tv_stone": "Stone",
+  "tv_bronze": "Bronze",
+  "tv_iron": "Iron",
+  "tv_antiquity": "Antiquity",
+  "tv_middle ages": "Middle Ages",
+  "tv_renaissance": "Renaissance",
+  "tv_enlightenment": "Enlightenment",
+  "tv_industrial": "Industrial",
+  "tv_contemporary": "Contemporary",
+  "tv_stone_wikipedia": "Stone_Age",
+  "tv_bronze_wikipedia": "Bronze_Age",
+  "tv_iron_wikipedia": "Iron_Age",
+  "tv_antiquity_wikipedia": "Ancient_history",
+  "tv_middle ages_wikipedia": "Middle_Ages",
+  "tv_renaissance_wikipedia": "Renaissance",
+  "tv_enlightenment_wikipedia": "Age_of_Enlightenment",
+  "tv_industrial_wikipedia": "Industrial_Revolution",
+  "tv_contemporary_wikipedia": "Contemporary_history",
   "tv_1300s": "1300s",
   "tv_1310s": "1310s",
   "tv_1320s": "1320s",
@@ -300,37 +332,5 @@
   "tv_1990s_wikipedia": "1990s",
   "tv_2000s_wikipedia": "2000s",
   "tv_2010s_wikipedia": "2010s",
-  "tv_2020s_wikipedia": "2020s",
-  "tv_hadean": "Hadean",
-  "tv_archean": "Archean",
-  "tv_proterozoic": "Proterozoic",
-  "tv_phanerozoic": "Phanerozoic",
-  "tv_paleozoic": "Paleozoic",
-  "tv_mesozoic": "Mesozoic",
-  "tv_cenozoic": "Cenozoic",
-  "tv_hadean_wikipedia": "Hadean",
-  "tv_archean_wikipedia": "Archean",
-  "tv_proterozoic_wikipedia": "Proterozoic",
-  "tv_phanerozoic_wikipedia": "Phanerozoic",
-  "tv_paleozoic_wikipedia": "Paleozoic",
-  "tv_mesozoic_wikipedia": "Mesozoic",
-  "tv_cenozoic_wikipedia": "Cenozoic",
-  "tv_stone": "Stone",
-  "tv_bronze": "Bronze",
-  "tv_iron": "Iron",
-  "tv_antiquity": "Antiquity",
-  "tv_middle ages": "Middle Ages",
-  "tv_renaissance": "Renaissance",
-  "tv_enlightenment": "Enlightenment",
-  "tv_industrial": "Industrial",
-  "tv_contemporary": "Contemporary",
-  "tv_stone_wikipedia": "Stone_Age",
-  "tv_bronze_wikipedia": "Bronze_Age",
-  "tv_iron_wikipedia": "Iron_Age",
-  "tv_antiquity_wikipedia": "Ancient_history",
-  "tv_middle ages_wikipedia": "Middle_Ages",
-  "tv_renaissance_wikipedia": "Renaissance",
-  "tv_enlightenment_wikipedia": "Age_of_Enlightenment",
-  "tv_industrial_wikipedia": "Industrial_Revolution",
-  "tv_contemporary_wikipedia": "Contemporary_history"
+  "tv_2020s_wikipedia": "2020s"
 }
