--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -155,6 +155,38 @@
   "tv_history_wikipedia": "",
   "tv_milenium_wikipedia": "",
   "tv_century_wikipedia": "",
+  "tv_hadean": "Hadéen",
+  "tv_archean": "Archéen",
+  "tv_proterozoic": "Protérozoïque",
+  "tv_phanerozoic": "Phanérozoïque",
+  "tv_paleozoic": "Paléozoïque",
+  "tv_mesozoic": "Mésozoïque",
+  "tv_cenozoic": "Cénozoïque",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Pierre",
+  "tv_bronze": "Bronze",
+  "tv_iron": "Fer",
+  "tv_antiquity": "Antiquité",
+  "tv_middle ages": "Moyen-âge",
+  "tv_renaissance": "Renaissance",
+  "tv_enlightenment": "Éclaircissement",
+  "tv_industrial": "Industriel",
+  "tv_contemporary": "Contemporain",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": "",
   "tv_1300s": "années 1300",
   "tv_1310s": "années 1310",
   "tv_1320s": "années 1320",
@@ -300,37 +332,5 @@
   "tv_1990s_wikipedia": "Années_1990",
   "tv_2000s_wikipedia": "Années_2000",
   "tv_2010s_wikipedia": "Années_2010",
-  "tv_2020s_wikipedia": "Années_2020",
-  "tv_hadean": "Hadéen",
-  "tv_archean": "Archéen",
-  "tv_proterozoic": "Protérozoïque",
-  "tv_phanerozoic": "Phanérozoïque",
-  "tv_paleozoic": "Paléozoïque",
-  "tv_mesozoic": "Mésozoïque",
-  "tv_cenozoic": "Cénozoïque",
-  "tv_hadean_wikipedia": "",
-  "tv_archean_wikipedia": "",
-  "tv_proterozoic_wikipedia": "",
-  "tv_phanerozoic_wikipedia": "",
-  "tv_paleozoic_wikipedia": "",
-  "tv_mesozoic_wikipedia": "",
-  "tv_cenozoic_wikipedia": "",
-  "tv_stone": "Pierre",
-  "tv_bronze": "Bronze",
-  "tv_iron": "Fer",
-  "tv_antiquity": "Antiquité",
-  "tv_middle ages": "Moyen-âge",
-  "tv_renaissance": "Renaissance",
-  "tv_enlightenment": "Éclaircissement",
-  "tv_industrial": "Industriel",
-  "tv_contemporary": "Contemporain",
-  "tv_stone_wikipedia": "",
-  "tv_bronze_wikipedia": "",
-  "tv_iron_wikipedia": "",
-  "tv_antiquity_wikipedia": "",
-  "tv_middle ages_wikipedia": "",
-  "tv_renaissance_wikipedia": "",
-  "tv_enlightenment_wikipedia": "",
-  "tv_industrial_wikipedia": "",
-  "tv_contemporary_wikipedia": ""
+  "tv_2020s_wikipedia": "Années_2020"
 }
