--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -155,6 +155,38 @@
   "tv_history_wikipedia": "",
   "tv_milenium_wikipedia": "",
   "tv_century_wikipedia": "",
+  "tv_hadean": "Adeano",
+  "tv_archean": "Archeano",
+  "tv_proterozoic": "Proterozoico",
+  "tv_phanerozoic": "Fanerozoico",
+  "tv_paleozoic": "Paleozoico",
+  "tv_mesozoic": "Mesozoico",
+  "tv_cenozoic": "Cenozoico",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Calcolo",
+  "tv_bronze": "Bronzo",
+  "tv_iron": "Ferro",
+  "tv_antiquity": "Antichità",
+  "tv_middle ages": "Medioevo",
+  "tv_renaissance": "Rinascimento",
+  "tv_enlightenment": "Illuminismo",
+  "tv_industrial": "Industriale",
+  "tv_contemporary": "Contemporaneo",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": "",
   "tv_1300s": "anni 1300",
   "tv_1310s": "Anni 1310",
   "tv_1320s": "Anni 1320",
@@ -300,37 +332,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "tv_hadean": "Adeano",
-  "tv_archean": "Archeano",
-  "tv_proterozoic": "Proterozoico",
-  "tv_phanerozoic": "Fanerozoico",
-  "tv_paleozoic": "Paleozoico",
-  "tv_mesozoic": "Mesozoico",
-  "tv_cenozoic": "Cenozoico",
-  "tv_hadean_wikipedia": "",
-  "tv_archean_wikipedia": "",
-  "tv_proterozoic_wikipedia": "",
-  "tv_phanerozoic_wikipedia": "",
-  "tv_paleozoic_wikipedia": "",
-  "tv_mesozoic_wikipedia": "",
-  "tv_cenozoic_wikipedia": "",
-  "tv_stone": "Calcolo",
-  "tv_bronze": "Bronzo",
-  "tv_iron": "Ferro",
-  "tv_antiquity": "Antichità",
-  "tv_middle ages": "Medioevo",
-  "tv_renaissance": "Rinascimento",
-  "tv_enlightenment": "Illuminismo",
-  "tv_industrial": "Industriale",
-  "tv_contemporary": "Contemporaneo",
-  "tv_stone_wikipedia": "",
-  "tv_bronze_wikipedia": "",
-  "tv_iron_wikipedia": "",
-  "tv_antiquity_wikipedia": "",
-  "tv_middle ages_wikipedia": "",
-  "tv_renaissance_wikipedia": "",
-  "tv_enlightenment_wikipedia": "",
-  "tv_industrial_wikipedia": "",
-  "tv_contemporary_wikipedia": ""
+  "tv_2020s_wikipedia": ""
 }
