--- a/Jsons/language/zh.json
+++ b/Jsons/language/zh.json
@@ -155,6 +155,38 @@
   "tv_history_wikipedia": "",
   "tv_milenium_wikipedia": "",
   "tv_century_wikipedia": "",
+  "tv_hadean": "冥古宙",
+  "tv_archean": "太古宙",
+  "tv_proterozoic": "元古代",
+  "tv_phanerozoic": "显生宙",
+  "tv_paleozoic": "古生代",
+  "tv_mesozoic": "中生代",
+  "tv_cenozoic": "新生代",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "石头",
+  "tv_bronze": "青铜",
+  "tv_iron": "铁",
+  "tv_antiquity": "古代",
+  "tv_middle ages": "中世纪",
+  "tv_renaissance": "复兴",
+  "tv_enlightenment": "启示",
+  "tv_industrial": "工业的",
+  "tv_contemporary": "当代的",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": "",
   "tv_1300s": "1300-talet",
   "tv_1310s": "1310-talet",
   "tv_1320s": "1320-talet",
@@ -300,37 +332,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "tv_hadean": "冥古宙",
-  "tv_archean": "太古宙",
-  "tv_proterozoic": "元古代",
-  "tv_phanerozoic": "显生宙",
-  "tv_paleozoic": "古生代",
-  "tv_mesozoic": "中生代",
-  "tv_cenozoic": "新生代",
-  "tv_hadean_wikipedia": "",
-  "tv_archean_wikipedia": "",
-  "tv_proterozoic_wikipedia": "",
-  "tv_phanerozoic_wikipedia": "",
-  "tv_paleozoic_wikipedia": "",
-  "tv_mesozoic_wikipedia": "",
-  "tv_cenozoic_wikipedia": "",
-  "tv_stone": "石头",
-  "tv_bronze": "青铜",
-  "tv_iron": "铁",
-  "tv_antiquity": "古代",
-  "tv_middle ages": "中世纪",
-  "tv_renaissance": "复兴",
-  "tv_enlightenment": "启示",
-  "tv_industrial": "工业的",
-  "tv_contemporary": "当代的",
-  "tv_stone_wikipedia": "",
-  "tv_bronze_wikipedia": "",
-  "tv_iron_wikipedia": "",
-  "tv_antiquity_wikipedia": "",
-  "tv_middle ages_wikipedia": "",
-  "tv_renaissance_wikipedia": "",
-  "tv_enlightenment_wikipedia": "",
-  "tv_industrial_wikipedia": "",
-  "tv_contemporary_wikipedia": ""
+  "tv_2020s_wikipedia": ""
 }
