--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -155,6 +155,38 @@
   "tv_history_wikipedia": "",
   "tv_milenium_wikipedia": "",
   "tv_century_wikipedia": "",
+  "tv_hadean": "冥王",
+  "tv_archean": "始生代",
+  "tv_proterozoic": "原生代",
+  "tv_phanerozoic": "顕生代",
+  "tv_paleozoic": "古生代",
+  "tv_mesozoic": "中生代",
+  "tv_cenozoic": "新生代",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "石",
+  "tv_bronze": "ブロンズ",
+  "tv_iron": "鉄",
+  "tv_antiquity": "古代",
+  "tv_middle ages": "中世",
+  "tv_renaissance": "ルネッサンス",
+  "tv_enlightenment": "啓発",
+  "tv_industrial": "産業",
+  "tv_contemporary": "コンテンポラリー",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": "",
   "tv_1300s": "1300-talet",
   "tv_1310s": "1310-talet",
   "tv_1320s": "1320-talet",
@@ -300,37 +332,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "tv_hadean": "冥王",
-  "tv_archean": "始生代",
-  "tv_proterozoic": "原生代",
-  "tv_phanerozoic": "顕生代",
-  "tv_paleozoic": "古生代",
-  "tv_mesozoic": "中生代",
-  "tv_cenozoic": "新生代",
-  "tv_hadean_wikipedia": "",
-  "tv_archean_wikipedia": "",
-  "tv_proterozoic_wikipedia": "",
-  "tv_phanerozoic_wikipedia": "",
-  "tv_paleozoic_wikipedia": "",
-  "tv_mesozoic_wikipedia": "",
-  "tv_cenozoic_wikipedia": "",
-  "tv_stone": "石",
-  "tv_bronze": "ブロンズ",
-  "tv_iron": "鉄",
-  "tv_antiquity": "古代",
-  "tv_middle ages": "中世",
-  "tv_renaissance": "ルネッサンス",
-  "tv_enlightenment": "啓発",
-  "tv_industrial": "産業",
-  "tv_contemporary": "コンテンポラリー",
-  "tv_stone_wikipedia": "",
-  "tv_bronze_wikipedia": "",
-  "tv_iron_wikipedia": "",
-  "tv_antiquity_wikipedia": "",
-  "tv_middle ages_wikipedia": "",
-  "tv_renaissance_wikipedia": "",
-  "tv_enlightenment_wikipedia": "",
-  "tv_industrial_wikipedia": "",
-  "tv_contemporary_wikipedia": ""
+  "tv_2020s_wikipedia": ""
 }
