--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -155,6 +155,38 @@
   "tv_history_wikipedia": "",
   "tv_milenium_wikipedia": "",
   "tv_century_wikipedia": "",
+  "tv_hadean": "Гадейский",
+  "tv_archean": "Архейский",
+  "tv_proterozoic": "Протерозой",
+  "tv_phanerozoic": "Фанерозой",
+  "tv_paleozoic": "палеозой",
+  "tv_mesozoic": "Мезозой",
+  "tv_cenozoic": "Кайнозой",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Камень",
+  "tv_bronze": "Бронза",
+  "tv_iron": "Железо",
+  "tv_antiquity": "Древность",
+  "tv_middle ages": "Средний возраст",
+  "tv_renaissance": "Ренессанс",
+  "tv_enlightenment": "Просвещение",
+  "tv_industrial": "Промышленный",
+  "tv_contemporary": "Современный",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": "",
   "tv_1300s": "1300-е годы",
   "tv_1310s": "1310-е годы",
   "tv_1320s": "1320-е годы",
@@ -300,37 +332,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "tv_hadean": "Гадейский",
-  "tv_archean": "Архейский",
-  "tv_proterozoic": "Протерозой",
-  "tv_phanerozoic": "Фанерозой",
-  "tv_paleozoic": "палеозой",
-  "tv_mesozoic": "Мезозой",
-  "tv_cenozoic": "Кайнозой",
-  "tv_hadean_wikipedia": "",
-  "tv_archean_wikipedia": "",
-  "tv_proterozoic_wikipedia": "",
-  "tv_phanerozoic_wikipedia": "",
-  "tv_paleozoic_wikipedia": "",
-  "tv_mesozoic_wikipedia": "",
-  "tv_cenozoic_wikipedia": "",
-  "tv_stone": "Камень",
-  "tv_bronze": "Бронза",
-  "tv_iron": "Железо",
-  "tv_antiquity": "Древность",
-  "tv_middle ages": "Средний возраст",
-  "tv_renaissance": "Ренессанс",
-  "tv_enlightenment": "Просвещение",
-  "tv_industrial": "Промышленный",
-  "tv_contemporary": "Современный",
-  "tv_stone_wikipedia": "",
-  "tv_bronze_wikipedia": "",
-  "tv_iron_wikipedia": "",
-  "tv_antiquity_wikipedia": "",
-  "tv_middle ages_wikipedia": "",
-  "tv_renaissance_wikipedia": "",
-  "tv_enlightenment_wikipedia": "",
-  "tv_industrial_wikipedia": "",
-  "tv_contemporary_wikipedia": ""
+  "tv_2020s_wikipedia": ""
 }
