--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -155,6 +155,38 @@
   "tv_history_wikipedia": "",
   "tv_milenium_wikipedia": "",
   "tv_century_wikipedia": "",
+  "tv_hadean": "Hadean",
+  "tv_archean": "Arkeiska",
+  "tv_proterozoic": "Proterozoikum",
+  "tv_phanerozoic": "Fanerozoikum",
+  "tv_paleozoic": "Paleozoikum",
+  "tv_mesozoic": "Mesozoikum",
+  "tv_cenozoic": "kenozoikum",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Sten",
+  "tv_bronze": "Brons",
+  "tv_iron": "Järn",
+  "tv_antiquity": "Antiken",
+  "tv_middle ages": "Medeltiden",
+  "tv_renaissance": "Renässansen",
+  "tv_enlightenment": "Upplysning",
+  "tv_industrial": "Industriell",
+  "tv_contemporary": "Samtida",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": "",
   "tv_1300s": "1300-talet",
   "tv_1310s": "1310-talet",
   "tv_1320s": "1320-talet",
@@ -300,37 +332,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "tv_hadean": "Hadean",
-  "tv_archean": "Arkeiska",
-  "tv_proterozoic": "Proterozoikum",
-  "tv_phanerozoic": "Fanerozoikum",
-  "tv_paleozoic": "Paleozoikum",
-  "tv_mesozoic": "Mesozoikum",
-  "tv_cenozoic": "kenozoikum",
-  "tv_hadean_wikipedia": "",
-  "tv_archean_wikipedia": "",
-  "tv_proterozoic_wikipedia": "",
-  "tv_phanerozoic_wikipedia": "",
-  "tv_paleozoic_wikipedia": "",
-  "tv_mesozoic_wikipedia": "",
-  "tv_cenozoic_wikipedia": "",
-  "tv_stone": "Sten",
-  "tv_bronze": "Brons",
-  "tv_iron": "Järn",
-  "tv_antiquity": "Antiken",
-  "tv_middle ages": "Medeltiden",
-  "tv_renaissance": "Renässansen",
-  "tv_enlightenment": "Upplysning",
-  "tv_industrial": "Industriell",
-  "tv_contemporary": "Samtida",
-  "tv_stone_wikipedia": "",
-  "tv_bronze_wikipedia": "",
-  "tv_iron_wikipedia": "",
-  "tv_antiquity_wikipedia": "",
-  "tv_middle ages_wikipedia": "",
-  "tv_renaissance_wikipedia": "",
-  "tv_enlightenment_wikipedia": "",
-  "tv_industrial_wikipedia": "",
-  "tv_contemporary_wikipedia": ""
+  "tv_2020s_wikipedia": ""
 }
