--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -155,6 +155,38 @@
   "tv_history_wikipedia": "",
   "tv_milenium_wikipedia": "",
   "tv_century_wikipedia": "",
+  "tv_hadean": "Хадеан",
+  "tv_archean": "Архейський",
+  "tv_proterozoic": "Протерозой",
+  "tv_phanerozoic": "Фанерозой",
+  "tv_paleozoic": "Палеозой",
+  "tv_mesozoic": "Мезозой",
+  "tv_cenozoic": "Кайнозой",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Камінь",
+  "tv_bronze": "Бронза",
+  "tv_iron": "Залізо",
+  "tv_antiquity": "Античність",
+  "tv_middle ages": "Середньовіччя",
+  "tv_renaissance": "Відродження",
+  "tv_enlightenment": "Просвітництво",
+  "tv_industrial": "Промисловий",
+  "tv_contemporary": "Сучасний",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": "",
   "tv_1300s": "1300-ті роки",
   "tv_1310s": "1310-ті роки",
   "tv_1320s": "1320-ті роки",
@@ -300,37 +332,5 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": "",
-  "tv_hadean": "Хадеан",
-  "tv_archean": "Архейський",
-  "tv_proterozoic": "Протерозой",
-  "tv_phanerozoic": "Фанерозой",
-  "tv_paleozoic": "Палеозой",
-  "tv_mesozoic": "Мезозой",
-  "tv_cenozoic": "Кайнозой",
-  "tv_hadean_wikipedia": "",
-  "tv_archean_wikipedia": "",
-  "tv_proterozoic_wikipedia": "",
-  "tv_phanerozoic_wikipedia": "",
-  "tv_paleozoic_wikipedia": "",
-  "tv_mesozoic_wikipedia": "",
-  "tv_cenozoic_wikipedia": "",
-  "tv_stone": "Камінь",
-  "tv_bronze": "Бронза",
-  "tv_iron": "Залізо",
-  "tv_antiquity": "Античність",
-  "tv_middle ages": "Середньовіччя",
-  "tv_renaissance": "Відродження",
-  "tv_enlightenment": "Просвітництво",
-  "tv_industrial": "Промисловий",
-  "tv_contemporary": "Сучасний",
-  "tv_stone_wikipedia": "",
-  "tv_bronze_wikipedia": "",
-  "tv_iron_wikipedia": "",
-  "tv_antiquity_wikipedia": "",
-  "tv_middle ages_wikipedia": "",
-  "tv_renaissance_wikipedia": "",
-  "tv_enlightenment_wikipedia": "",
-  "tv_industrial_wikipedia": "",
-  "tv_contemporary_wikipedia": ""
+  "tv_2020s_wikipedia": ""
 }
